app/styles/spatial-catch.scss
#spatial-catch {
  max-width: 1080px;
  padding-bottom: 30px;

  .main-title {
    margin-top: 32px;
  }

  #main-text {
    margin: 0;
    line-height: 1.7;
  }

  #note {
    font-size: smaller;
  }

  #cell-map {
    width: 100%;
    height: 550px;
    position: relative;
  }

  .row {
  	padding-left: 8px;
  	padding-right: 8px;
    margin-bottom: 8px;
  }

  #query-inputs {
  	padding-top: 20px;zoom-controls

  	.col-md-2, .col-md-4 {
  		padding-left: 8px;
  		padding-right: 8px;
  		padding-bottom: 8px;
  	}

  	.catches-by-query {
  		background-color: #f1f1f1;
      height: 22px;
      margin-bottom: 6px;
      padding-left: 7px;
      min-width: 175px; //This makes the "Catches by" title stretch over the column into the next column, to make it connect with the title to the right of it.
  	}
  }

  .small-label {
  	font-size: smaller;
  	font-weight: bold;

    .not-bold {
      font-weight: normal !important;
    }
  }

  label {
    font-size: 14px;
    font-weight: bold;
    padding-right: 8px;
  }

  .query-select, .form-control {
  	border-color: #979797;
  	height: 36px;

  	input {
  		margin-left: 9px;
  	}
  }

  .col-md-* {
  	padding-left: 8px;
  	padding-right: 8px;
  }

  //Vertically centers the little "x" close button on the ui-select tags
  .ui-select-multiple.ui-select-bootstrap .ui-select-match .close {
	  line-height: 1;
	}

  .expand-collapse-button {
    color: #1879BB;
    cursor: pointer;

    .expand-collapse-icon {
      padding-right: 8px;
      font-size: 18px;
      width: 16px;
      height: 16px;
      float: left;
      margin-right: 5px;
    }

    .info-icon {
      font-size: 18px;
      width: 16px;
      height: 16px;
      position: relative;
      bottom: 4px;
      padding-left: 3px;
    }

    .expand-collapse-label {
      color: #1879BB;
      position: relative;
      bottom: 4px;
      font-size: larger;
      font-weight: 600;

      .expand-collapse-sub-label {
        font-weight: normal;
        font-size: small;
        bottom: 1px;
      }
    }

    .expand-icon {
      background: url(../images/control-caret-right.svg);
    }

    .collapse-icon {
      background: url(../images/control-caret-down.svg);
    }
  }

  .popover {
    color: black;
  }

  .timeline {
    height: 78px;
    padding: 43px 26px;
  }

  #timeline-slider {
    width: 100%;
  }

  .slider {
    .slider-handle.custom {
      background: url(../images/timeline-handle.svg);
      width: 25px;
      height: 30px;
      position: relative;
      top: -3px;
      box-shadow: none;
      margin-top: -8px;

      &::before {
        content: '';
      }
    }

    .slider-tick.custom {
      background: url(../images/timeline-tick.svg);
      width: 23px;
      height: 23px;
      box-shadow: none;
      margin-top: -9px;

      &::before {
        content: '';
      }
    }

    .slider-selection.tick-slider-selection {
      background-image: none;
      box-shadow: none;
      -mox-box-shadow: none;
    }

    .slider-track {
      background-color: #CCCCCC;
      height: 6px;
      background-image: none;
      box-shadow: none;
      -mox-box-shadow: none;
    }

    .slider-tick-label {
      font-weight: 600;
      position: relative;
      top: -50px;
    }
  }

  .tooltip.top {
    .tooltip-arrow {
      margin-left: -3px;
      bottom: 14px;
    }
    .tooltip-inner {
      position: relative;
      left: 2px;
      bottom: 14px;
      padding: 5px 14px;
      font-weight: 700;
      font-size: 18px;
    }
  }

  .form-inline {
    select {
      width: 150px;
    }
  }

  .compare-bar {
    padding-bottom: 8px;
  }

  .legend-row {
    padding-bottom: 6px;
  }

  .legend-hr {
    margin-top: 0;
  }

  .legend-color-bar {
    height: 22px;
    margin-left: 0;

    .tooltip-inner {
      font-size: small !important;
      font-weight: normal !important;
    }

    li.selected {
      border: 3px solid rgba(0, 0, 0, .4);
    }
  }

  .legend-color-swatch {
    height: 100%;
    background-color: #F68E1E;
  }

  .legend-measure {
    font-size: smaller;
  }

  #cell-map-loading-overlay {
    width: 100%;
    height: 100%;
    background-color: rgba(255, 255, 255, 0.5);
    position: absolute;
    z-index: 4;
    color: #000000;

    div {
      position: relative;
      top: 180px;
      text-align: center;

      i {
        font-size: 48px;
        top: 250;
      }

      p {
        font-weight: 400;
        font-size: 20px;
        top: 320px;
        width: 100%;
      }
    }
  }

  #zoom-controls {
    position: absolute;
    z-index: 3;

    div {
      position: relative;
      top: 20px;
      left: 20px;
    }

    .zoom-in-control {
      background: url(../images/control-plus.svg);
      width: 24px;
      height: 24px;
    }

    .zoom-out-control {
      margin-top: 2px;
      background: url(../images/control-minus.svg);
      width: 24px;
      height: 24px;
    }
  }

  #update-map-button {
    max-width: 360px;
    background-color: #0779BE;
    margin: 24px auto 16px auto;
    border: none;
    height: 50px;
    font-size: larger;
  }

  #spatial-catch-legend {
    padding-top: 24px;
    border-top: 1px solid #aaaaaa;
  }

  hr {
    border-top-color: #D9D9D9;
  }

  .legend-column {
    padding-bottom: 0;
    padding-right: 3px;
  }

  #taxonDistributionInput {
    .selectize-control {
      padding-bottom: 10px;
    }
  }
}

